# Agent-General-Staff

./: .gitattributes  .gitignore  AGENTS.md  AGENT_SUITE_PROTOCOL.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.en.md  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WORKSPACE.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_install.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/ags-cli/: Cargo.toml
crates/ags-cli/src/: context.rs  file_plan.rs  host_platforms.rs  host_probe.rs  main.rs  managed_projects.rs  output.rs  project_templates.rs  receipt_bridge.rs
crates/ags-cli/src/agents/: govern.rs  host_specs.rs  mod.rs  scan.rs  verify.rs
crates/ags-cli/src/capability/: mod.rs
crates/ags-cli/src/cli/: actions.rs  kernel_actions.rs  mod.rs
crates/ags-cli/src/doctor/: mod.rs
crates/ags-cli/src/init/: mod.rs  overlay.rs
crates/ags-cli/src/kernel/: awareness.rs  bootstrap.rs  compliance.rs  gate.rs  hooks.rs  mcp.rs  mod.rs  policy.rs  receipt.rs  release.rs  rollback.rs  runner.rs  sync.rs  task.rs  verify.rs
crates/ags-cli/src/setup/: apply.rs  global_entry.rs  memory.rs  mod.rs  plan.rs  recommendations.rs  rollback.rs  templates.rs  verify.rs
crates/ags-cli/src/skill/: mod.rs
crates/ags-cli/src/update/: apply.rs  lanes.rs  mod.rs  notifier.rs  plan.rs  repair.rs  rollback.rs
crates/ags-cli/tests/: cli_contracts.rs
crates/ags-mcp/: Cargo.toml
crates/ags-mcp/src/: lib.rs  prompts.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/ags-mcp/src/prompts/: delivery_report.txt  global_kernel.txt  task_card_request_gate.txt
crates/ags-mcp/src/resources/: evolver_boundary.md  global_kernel.md
crates/ags-platform/: Cargo.toml
crates/ags-verify/: Cargo.toml
crates/ags-verify/src/: change_lane.rs  lib.rs  visible_status.rs
crates/bootstrap-dry-run/: Cargo.toml
crates/bootstrap-dry-run/src/: lib.rs
crates/capability-registry/: Cargo.toml
crates/capability-registry/src/: lib.rs
crates/capability-route/: Cargo.toml
crates/capability-route/src/: lib.rs
crates/execution-policy/: Cargo.toml
crates/project-discovery/: Cargo.toml
crates/project-discovery/src/: lib.rs
crates/prompt-request-classifier/: Cargo.toml
crates/prompt-request-classifier/src/: lib.rs
crates/receipt/: Cargo.toml
crates/receipt/src/: lib.rs
crates/request-governance/: Cargo.toml
crates/request-governance/src/: lib.rs
crates/request-router/: Cargo.toml
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/skill-governance/: Cargo.toml
crates/skill-resolver/: Cargo.toml
crates/skill-resolver/src/: lib.rs
crates/skill-resolver/tests/: skill_resolver.rs
crates/suite-doctor/: Cargo.toml
crates/suite-doctor/src/: checks.rs  lib.rs  report.rs  types.rs
crates/task-card-validator/: Cargo.toml
crates/task-compiler/: Cargo.toml
crates/task-compiler/src/: lib.rs
crates/workflow-sync-check/: Cargo.toml
crates/workflow-sync-check/src/: allowlist.rs  assertions.rs  drift.rs  lib.rs  manifest.rs  parser.rs  report.rs  types.rs
docs/: architecture.md  comparison.md  full-installer.md  mcp-servers.md  philosophy.en.md  philosophy.md  release-matrix.md  skill-recommendations.md  third-party-skills.md
evals/: README.md  case-01-authority-escalation.md  case-02-unverified-delivery.md  case-03-solution-as-execution.md
evals/reports/: case-01-authority-escalation.md  case-02-unverified-delivery.md  case-03-solution-as-execution.md
examples/: README.md
examples/demo-project/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
examples/outputs/: sample-preflight-output.txt  sample-verify-output.txt
examples/receipts/: sample-receipt.json
examples/task-cards/: claude-code-medium.md  codex-local-light.md  cursor-heavy-plan.md  light-demo-task.md  medium-demo-task.md
global-rules/: RTK.md  SOUL.md  core.md
global-skills/auto-brainstorm/: SKILL.md
global-skills/auto-debug/: SKILL.md
global-skills/auto-verify/: SKILL.md
global-skills/claude-delivery-report/: SKILL.md
global-skills/claude-execution-prompt-maker/: SKILL.md
global-skills/diagnose/: SKILL.md
global-skills/graphify/: SKILL.md
global-skills/graphify-project-map/: SKILL.md
global-skills/grill-with-docs/: SKILL.md
global-skills/improve-codebase-architecture/: SKILL.md
global-skills/prompt-maker/: SKILL.md
global-skills/prototype/: SKILL.md
global-skills/superpowers/: SKILL.md
global-skills/zoom-out/: SKILL.md
governance/: agent-toolchain-sync-governance.md  inventory-schema.md  mcp-adoption-log.yaml  project-sync-registry.yaml  rollback.md  skill-adoption-log.yaml  skill-ignore-list.yaml  skill-sync.md  skills-inventory.md  sync-protocol.md
manifests/: capabilities.yaml  mcp-registry.yaml  skill-recommendations.yaml  skills-registry.yaml  skills.lock.example.yaml  suite.core.yaml  suite.full.yaml  suite.yaml
manifests/templates/: README.md  runtime-profiles.template.yaml
project-integration/: AGENTS.md.template  CLAUDE.md.template
project-integration/config/: agent-project-profile.yaml.template
protocol/: 2.0-baseline.md  2.0-roadmap.md  agent-task-protocol.md  context-memory.md  cursor-skill-index.md  evolution-memory.md  mcp-server.md  project-profile.md  runtime-adapters.md  skill-governance.md  task-card-template.md  task-routing.md
scripts/: bootstrap.sh  claude-stop-memory-capture.py  configure-review-hooks.mjs  context-memory.sh  diff-local.sh  govern-new-skills.sh  install-suite-to-project.sh  install.sh  kit-doctor.sh  kit-install.sh  lane-decision.sh  memory-start-context.sh  raw-tool-call-stop-guard.js  rollback.sh  run-task-card.sh  security-doctor.sh  stop-archive-hook.sh  suite-doctor.sh  sync-project-workflow.sh  sync-public.sh  sync-skill-aliases.py  update.sh  validate-task-card.sh  validate.sh  verify.sh
task-modules/: agent-toolchain-sync-task-card.md
templates/: task-card-template.md
templates/fallback-task-cards/: heavy.md  light.md  medium.md
(+56 files in other folders)
