[workspace]
members = [
    "crates/ags-cli",
    "crates/task-card-validator",
    "crates/prompt-request-classifier",
    "crates/workflow-sync-check",
    "crates/suite-doctor",
    "crates/bootstrap-dry-run",
    "crates/execution-policy",
    "crates/project-discovery",
    "crates/task-compiler",
    "crates/capability-registry",
    "crates/receipt",
    "crates/ags-verify",
    "crates/runner",
    "crates/skill-governance",
    "crates/ags-mcp",
    "crates/ags-platform",
]
resolver = "2"

[workspace.package]
version = "2.6.0"
edition = "2021"
license = "MIT"
