[workspace]
members = [
    "crates/ags-cli",
    "crates/task-card-validator",
    "crates/request-router",
    "crates/workflow-sync-check",
    "crates/suite-doctor",
    "crates/bootstrap-dry-run",
    "crates/execution-policy",
    "crates/project-discovery",
    "crates/task-compiler",
    "crates/capability-registry",
    "crates/receipt",
    "crates/ags-verify",
    "crates/runner",
    "crates/skill-governance",
    "crates/ags-mcp",
    "crates/ags-platform",
    "crates/skill-resolver",
]
resolver = "2"

[workspace.package]
version = "0.2.8"
edition = "2021"
license = "GPL-3.0-only"
