[package]
name = "ags-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Governance Suite unified CLI"

[[bin]]
name = "ags"
path = "src/main.rs"

[dependencies]
task-card-validator = { path = "../task-card-validator" }
workflow-sync-check = { path = "../workflow-sync-check" }
suite-doctor = { path = "../suite-doctor" }
bootstrap-dry-run = { path = "../bootstrap-dry-run" }
execution-policy = { path = "../execution-policy" }
project-discovery = { path = "../project-discovery" }
ags-verify = { path = "../ags-verify" }
task-compiler = { path = "../task-compiler" }
runner = { path = "../runner" }
receipt = { path = "../receipt" }
skill-governance = { path = "../skill-governance" }
capability-registry = { path = "../capability-registry" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
