[package]
name = "ags-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent General Staff unified CLI"

[[bin]]
name = "ags"
path = "src/main.rs"

[dependencies]
ags-platform = { path = "../ags-platform" }
task-card-validator = { path = "../task-card-validator" }
workflow-sync-check = { path = "../workflow-sync-check" }
suite-doctor = { path = "../suite-doctor" }
bootstrap-dry-run = { path = "../bootstrap-dry-run" }
execution-policy = { path = "../execution-policy" }
project-discovery = { path = "../project-discovery" }
task-compiler = { path = "../task-compiler" }
capability-registry = { path = "../capability-registry" }
receipt = { path = "../receipt" }
ags-verify = { path = "../ags-verify" }
runner = { path = "../runner" }
skill-governance = { path = "../skill-governance" }
ags-mcp = { path = "../ags-mcp" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
