[package]
name = "ags-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGS verification core — structured check items, scoped verification, and machine-readable reports"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
