[package]
name = "bootstrap-dry-run"
version.workspace = true
edition.workspace = true
description = "Bootstrap dry run — simulated readiness checks, no real bootstrap"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suite-doctor = { path = "../suite-doctor" }

[dev-dependencies]
tempfile = "3"
