[package]
name = "capability-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGS capability registry — read-only discovery of project capabilities"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
