[package]
name = "capability-route"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic advisory demand → capability routing (AGS Capability Route)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prompt-request-classifier = { path = "../prompt-request-classifier" }
skill-governance = { path = "../skill-governance" }
ags-platform = { path = "../ags-platform" }

[dev-dependencies]
serde_json = "1"
