[package]
name = "project-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGS project discovery, protocol status, and agent instructions library"

[dependencies]
ags-platform = { path = "../ags-platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
