[package]
name = "prompt-request-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic classifier for prompt / task-card request intent (AGS entry gate)"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
