[package]
name = "receipt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGS receipt — task run receipt generation, verification, and compliance checking"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
