[package]
name = "request-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGS typed host proposal validation and decision-lease contracts"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
