[package]
name = "skill-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic exact skill resolver and host capability snapshot"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
request-governance = { path = "../request-governance" }
skill-governance = { path = "../skill-governance" }
ags-platform = { path = "../ags-platform" }
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
