[package]
name = "suite-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Suite doctor — shared diagnostics core with HealthReport / Finding / Severity types"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ags-platform = { path = "../ags-platform" }
capability-route = { path = "../capability-route" }
skill-governance = { path = "../skill-governance" }
