[package]
name = "task-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M4 Task Compiler — rule-based intent-to-task-card compiler"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ags-platform = { path = "../ags-platform" }

[dev-dependencies]
# Test-only: assert compiled cards pass the REAL validator (not just the
# compiler's heuristic self-check). No runtime dependency edge is introduced.
task-card-validator = { path = "../task-card-validator" }
