[package]
name = "workflow-sync-check"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Read-only multi-project protocol drift checker with section-level comparison and legal-difference allowlists"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
